--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: ${SPRING_DATASOURCE_URL=jdbc:postgresql://jey:bGz7APVKbYDIdDUnbsaMeLJR4iuKBfy7@dpg-crhgbkjv2p9s73fkiejg-a.singapore-postgres.render.com/springstoreapi}
-    username: ${SPRING_DATASOURCE_USERNAME=jey}
-    password: ${SPRING_DATASOURCE_PASSWORD=bGz7APVKbYDIdDUnbsaMeLJR4iuKBfy7}
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://jey:bGz7APVKbYDIdDUnbsaMeLJR4iuKBfy7@dpg-crhgbkjv2p9s73fkiejg-a.singapore-postgres.render.com/springstoreapi}
+    username: ${SPRING_DATASOURCE_USERNAME:jey}
+    password: ${SPRING_DATASOURCE_PASSWORD:bGz7APVKbYDIdDUnbsaMeLJR4iuKBfy7}
   jpa:
     properties:
       hibernate:
